Fix full view text overflow in wide screen sizes

--- a/web-ui/src/main/resources/catalog/views/estat/less/gn_view_estat.less
+++ b/web-ui/src/main/resources/catalog/views/estat/less/gn_view_estat.less
@@ -5,5 +5,8 @@
    
  @import (less) "../../../lib/style/ec.css"; 
  @import (less) "../../../lib/style/ec-content.css";    
- @import (less) "estat.css"; 
+ @import (less) "estat.css";
+
+/* ESTAT layout is a fixed width layout, use medium size for large size screens, to avoid texts to overflow */
+@container-lg:                 @container-desktop;
 
